website/pages/style.css
/* Global Component Styles */
@import '~@hashicorp/mktg-global-styles/style.css';

:root {
  --highlight-color: var(--brand-link);
}

@import '~@hashicorp/react-consent-manager/style.css';
@import '~@hashicorp/react-toggle/style.css';
@import '~@hashicorp/react-alert-banner/style.css';
@import '~@hashicorp/react-button/styles/index.css';
@import '~@hashicorp/react-featured-slider/style.css';
@import '~@hashicorp/react-hero/style.css';
@import '~@hashicorp/react-logo-grid/style.css';
@import '~@hashicorp/react-tabs/style.css';
@import '~@hashicorp/react-text-split/style.css';
@import '~@hashicorp/react-use-cases/style.css';
@import '~@hashicorp/react-vertical-text-block-list/style.css';

/* Global Components - Transpiled */

/* Local Components */
@import '../components/footer/style.css';
@import '../components/subnav/style.css';
@import '../components/use-case-cta-section/style.css';

/* Pages */
@import './not-found/style.css';
@import './use-cases/style.css';

/* Print Styles */
@import './print.css';

/*
 * About this selector:
 * `.g-subnav ~ *` finds all elements after the navigation.
 * `:target` finds the active permalink on the page.
 *
 * About this style:
 * `scroll-margin-top` adjusts the vertical scroll of a permalink.
 * `64px` adjusts the scroll to account for the navigation.
 * `0.5em` further adjusts the scroll to give the permalink breathing room.
 *
 * See: https://developer.mozilla.org/en-US/docs/Web/CSS/:target
 * See: https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-margin-top
 */
.g-subnav ~ * :target {
  scroll-margin-top: calc(64px + 0.5em);
}

/* Layout Styles */
.g-section-block section {
  padding-top: 96px;
  padding-bottom: 96px;

  & > .g-section-header + *,
  & > .g-grid-container > .g-section-header + * {
    margin-top: 72px;
  }

  &:not(.no-section-spacing) > * + *,
  & > .g-grid-container > * + * {
    margin-top: 96px;
  }
}

.g-section-block .button-container {
  display: -webkit-box;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  justify-content: center;
  margin: auto -8px -16px;
}

.g-section-block section > * + .button-container,
.g-section-block section > .g-grid-container > * + .button-container {
  margin-top: 40px;
}

.g-section-block .button-container > * {
  margin: auto 8px 16px;
}

.g-section-block.theme-black-background-white-text {
  background: var(--gray-1);
  color: white;
}

/** DEBT: short term patch until the branding changes roll out. Remove this with this PR — https://github.com/hashicorp/vault/pull/11118 **/
.g-content {
  --brand-text: var(--vagrant) !important;
}
.g-docs-sidenav {
  --brand: var(--vagrant) !important;
  --brand-text: var(--vagrant) !important;
}

